--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>สวัสดี! ฉันคือ ธนภัทร นุกูล</h1>
+        <h1>สวัสดี! ฉันคือ Tanapat</h1>
         <p>นักพัฒนาเว็บไซต์มือใหม่</p>
     </header>
     
